# BFTStore

./: BlockCache.hpp  CMakeLists.txt  Common.h  Erasure.cpp  Erasure.h  ProjectRocksDB.cmake  ProjectSecp256k1.cmake  ProjectSnappy.cmake  ProjectTBB.cmake  README.md  example.cpp
erasure-codes/: liberasure.h
gf-arithmetic/: detectcpu.h
libbftstore/: CMakeLists.txt  Erasure.cpp  Erasure.h  FixedHash.cpp  FixedHash.h  Hash.h
libbftstore/cmake/: ProjectBoost.cmake
libbftstore/erasure-codes/: export_defs.h
libbftstore/example/: example.cpp
libbftstore/include/: Common.h  Erasure.h
log-table-generator/: generate-log-tables
lohi-generator/: generate-lohi-table
