file(GLOB SRC_LIST "*.cpp")
file(GLOB HEADERS "*.h")
add_subdirectory(gf-arithmetic)
add_subdirectory(erasure-codes)
add_subdirectory(lohi-generator)
add_subdirectory(log-table-generator)
add_library(bftstore ${SRC_LIST} ${HEADERS})
target_compile_options(bftstore PRIVATE -Wno-unused-variable -Wno-unused-parameter)
target_link_libraries(bftstore PUBLIC erasure devcore TBB RocksDB)